--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 
+# .Dstore
+.DS_Store
+**/.DS_Store
